--- a/src/app/card-produto/card-produto.scss
+++ b/src/app/card-produto/card-produto.scss
@@ -10,17 +10,10 @@ $font-size-xs: 0.75rem;
 // The main container for the product card
 .product-card {
   display: flex;
-  padding: 1rem;
+  padding: 1.25rem;
   flex-direction: column;
-  border-radius: 0.75rem;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #ebe5e5;
-  width: 16rem;
+  border-radius: 1rem;
   background-color: #ffffff;
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-feature-settings: normal;
-  font-variation-settings: normal;
 
 
   .product-info {
@@ -33,7 +26,7 @@ $font-size-xs: 0.75rem;
       display: flex;
       flex-direction: row;
       .product-code {
-        font-size: 0.75rem;
+        font-size: 1rem;
         line-height: 1rem;
         color: #6B7280;
         margin: 0;
@@ -47,20 +40,20 @@ $font-size-xs: 0.75rem;
     }
     .product-quality {
       background-color: $color-white;
-      border: 1px solid $color-border;
+      border: 1px solid gold;
       border-radius: 0.5rem;
 
       padding-top: 0.25rem;
       padding-bottom: 0.25rem;
-      padding-left: 0.75rem; // px-5
-      padding-right: 0.75rem; // px-5
-      font-size: 0.8rem;
+      padding-left: 1rem; // px-5
+      padding-right: 1rem; // px-5
+      font-size: 1rem;
       line-height: 1rem;
     }
   }
 
   .product-name {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     line-height: 1.75rem;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -70,7 +63,7 @@ $font-size-xs: 0.75rem;
   }
 
   .product-stock {
-    font-size: 0.75rem;
+    font-size: 1rem;
     line-height: 1rem;
     font-weight: 700;
     color: #DC2626;
@@ -91,7 +84,7 @@ $font-size-xs: 0.75rem;
 
     .product-price {
       font-weight: 700;
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       line-height: 1.75rem;
       font-weight: bold;
       margin-top: 0.5rem;
@@ -99,7 +92,7 @@ $font-size-xs: 0.75rem;
     }
 
     .payment-method {
-      font-size: 0.75rem;
+      font-size: 1rem;
       line-height: 1rem;
       margin-top: 0.75rem;
       margin-bottom: 0.75rem;
@@ -119,11 +112,11 @@ $font-size-xs: 0.75rem;
     color: #ffffff;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
-    padding-left: 1.25rem; // px-5
-    padding-right: 1.25rem; // px-5
-    border-radius: 0.75rem;
+    padding-left: 2.5rem; // px-5
+    padding-right: 2.5rem; // px-5
+    border-radius: 1.25rem;
     border-width: 0;
-    font-size: 0.8rem;
+    font-size: 1rem;
     line-height: 1rem;
     margin: 0;
 
@@ -135,14 +128,14 @@ $font-size-xs: 0.75rem;
   // Secondary button style
   .btn-secondary {
     background-color: $color-white;
-    border: 1px solid $color-border;
-    border-radius: 0.75rem;
-
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-    padding-left: 0.75rem; // px-5
-    padding-right: 0.75rem; // px-5
-    font-size: 0.8rem;
+    border: 1px solid $color-text-dark;
+    border-radius: 1.25rem;
+    color: $color-text-dark;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-left: 1.25rem; // px-5
+    padding-right: 1.25rem; // px-5
+    font-size: 1rem;
     line-height: 1rem;
 
     &:hover {
