--- a/src/app/card-produto/card-produto.scss
+++ b/src/app/card-produto/card-produto.scss
@@ -7,7 +7,6 @@ $color-white: #ffffff;
 $border-radius-xl: 0.75rem;
 $font-size-xs: 0.75rem;
 
-// The main container for the product card
 .product-card {
   display: flex;
   padding: 1.25rem;
@@ -119,6 +118,7 @@ $font-size-xs: 0.75rem;
     font-size: 1rem;
     line-height: 1rem;
     margin: 0;
+    cursor: pointer;
 
     &:hover {
       background-color: darken($color-primary, 10%);
@@ -137,6 +137,7 @@ $font-size-xs: 0.75rem;
     padding-right: 1.25rem; // px-5
     font-size: 1rem;
     line-height: 1rem;
+    cursor: pointer;
 
     &:hover {
 
